# AdGuardHome

./: .dockerignore  .gitignore  Cargo.toml
.github/workflows/: build.yml  docker-rust.yml  rust.yml
rust-port/: Cargo.toml  Dockerfile  PROGRESS.md  RULES.md  docker-buildx.sh  init.md
rust-port/crates/agh-core/: Cargo.toml
rust-port/crates/agh-core/src/: cli.rs  client.rs  config_io.rs  lib.rs
rust-port/crates/agh-core/src/config/: clients.rs  dhcp.rs  dns.rs  filter.rs  http.rs  log.rs  mod.rs  os_cfg.rs  querylog.rs  stats.rs  tls.rs  user.rs
rust-port/crates/agh-core/tests/: config_migration.rs
rust-port/crates/agh-dhcp/: Cargo.toml
rust-port/crates/agh-dhcp/src/: arp.rs  leases.rs  lib.rs  v4.rs  v6.rs
rust-port/crates/agh-dns/: Cargo.toml
rust-port/crates/agh-dns/benches/: dns.rs
rust-port/crates/agh-dns/src/: cache.rs  dnscrypt.rs  doh.rs  doq.rs  dot.rs  filtering_handler.rs  lib.rs  server.rs  upstream.rs
rust-port/crates/agh-filtering/: Cargo.toml
rust-port/crates/agh-filtering/benches/: filtering.rs
rust-port/crates/agh-filtering/src/: lib.rs  matcher.rs  parser.rs  safebrowsing.rs  safesearch.rs  updater.rs
rust-port/crates/agh-filtering/tests/fixtures/: easylist_sample.txt
rust-port/crates/agh-main/: Cargo.toml
rust-port/crates/agh-main/src/: main.rs
rust-port/crates/agh-querylog/: Cargo.toml
rust-port/crates/agh-querylog/src/: lib.rs  query.rs  storage.rs
rust-port/crates/agh-stats/: Cargo.toml
rust-port/crates/agh-stats/src/: aggregation.rs  lib.rs  storage.rs
rust-port/crates/agh-updater/: Cargo.toml
rust-port/crates/agh-updater/src/: download.rs  lib.rs  version.rs
rust-port/crates/agh-web/: Cargo.toml
rust-port/crates/agh-web/src/: auth.rs  frontend.rs  lib.rs  routes.rs  tls_config.rs
rust-port/crates/agh-web/tests/: api_auth.rs  api_setup.rs  api_status.rs  api_tls.rs  common.rs
rust-port/docs/: api-audit.md  benchmarks.md  config-schema.md
rust-port/tasks/: TASK-00-workspace-scaffold.md  TASK-01-crate-skeletons.md  TASK-02-ci-skeleton.md  TASK-03-api-audit.md  TASK-04-config-schema-audit.md  TASK-05-test-harness.md  TASK-06-core-config-types.md  TASK-07-core-config-io.md  TASK-08-core-cli.md  TASK-09-core-client-registry.md  TASK-10-filtering-parser.md  TASK-11-filtering-matcher.md  TASK-12-filtering-safebrowsing.md  TASK-13-filtering-safesearch.md  TASK-14-filtering-updater.md  TASK-15-dns-server-core.md  TASK-16-dns-upstream.md  TASK-17-dns-cache.md  TASK-18-dns-doh-dot.md  TASK-19-dns-doq-dnscrypt.md  TASK-20-dns-filtering-wire.md  TASK-21-dhcp-v4.md  TASK-22-dhcp-v6.md  TASK-23-dhcp-leases.md  TASK-24-dhcp-api.md  TASK-25-stats-storage.md  TASK-26-stats-aggregation.md  TASK-27-stats-api.md  TASK-28-querylog-storage.md  TASK-29-querylog-query.md  TASK-30-querylog-api.md  TASK-31-web-auth.md  TASK-32-web-frontend-serving.md  TASK-33-web-core-routes.md  TASK-34-web-admin-routes.md  TASK-35-web-setup-wizard.md  TASK-36-web-tls.md  TASK-37-updater-version.md  TASK-38-updater-download.md  TASK-39-main-service.md  (+7 more)
rust-port/tests/: benchmark.sh  dns_compliance.sh
rust-port/tests/api_compat/: auth_test.rs  mod.rs  status_test.rs
rust-port/tests/fixtures/: dns_queries.txt  test-config.yaml
rust-port/tests/fixtures/configs/: maximal.yaml  minimal.yaml  schema27.yaml  typical.yaml
rust-port/tests/k6/: dns_load.js
src/: config.rs  dns.rs  main.rs  web.rs
