[workspace]
members = [
  "crates/agh-core",
  "crates/agh-filtering",
  "crates/agh-dns",
  "crates/agh-dhcp",
  "crates/agh-stats",
  "crates/agh-querylog",
  "crates/agh-web",
  "crates/agh-updater",
  "crates/agh-main",
]
resolver = "2"

[workspace.dependencies]
tokio              = { version = "1", features = ["full"] }
axum               = "0.8"
tower              = "0.5"
tower-http         = { version = "0.6", features = ["fs", "cors", "trace"] }
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
serde_yaml         = "0.9"
hickory-server     = "0.25"
hickory-resolver   = "0.25"
hickory-proto      = "0.25"
rustls             = { version = "0.23", features = ["ring"] }
tokio-rustls       = "0.26"
redb               = "2"
rust-embed         = "8"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap               = { version = "4.5", features = ["derive"] }
reqwest            = { version = "0.12", features = ["rustls-tls", "json"] }
thiserror          = "2.0"
anyhow             = "1.0"
notify             = "6"
socket2            = "0.5"
quinn              = "0.11"
flate2             = "1.1"
tar                = "0.4"
sha2               = "0.10"
hex                = "0.4"
chrono             = { version = "0.4", features = ["serde"] }
uuid               = { version = "1", features = ["v4"] }
async-trait        = "0.1"
bytes              = "1"
aho-corasick       = "1.1"
regex              = "1"
ipnet              = "2"
criterion          = { version = "0.5", features = ["html_reports"] }
bcrypt             = "0.15"
rcgen              = "0.13"
rustls-pemfile     = { version = "2", package = "rustls-pemfile" }

[profile.release]
strip         = true
opt-level     = 3
lto           = "thin"
codegen-units = 1
