[package]
name = "agh-dhcp"
version = "0.1.0"
edition = "2024"

[dependencies]
agh-core   = { path = "../agh-core" }
socket2    = { workspace = true }
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
chrono     = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
