[package]
name = "agh-dns"
version = "0.1.0"
edition = "2024"

[dependencies]
agh-core         = { path = "../agh-core" }
agh-filtering    = { path = "../agh-filtering" }
hickory-server   = { workspace = true }
hickory-resolver = { workspace = true }
hickory-proto    = { workspace = true }
tokio            = { workspace = true }
rustls           = { workspace = true }
tokio-rustls     = { workspace = true }
axum             = { workspace = true }
thiserror        = { workspace = true }
tracing          = { workspace = true }
async-trait      = { workspace = true }
quinn            = { workspace = true }
rustls-pemfile   = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tokio = { workspace = true }

[[bench]]
name = "dns"
harness = false
