[package]
name = "agh-stats"
version = "0.1.0"
edition = "2024"

[dependencies]
agh-core   = { path = "../agh-core" }
redb       = { workspace = true }
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
chrono     = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
