[package]
name = "agh-updater"
version = "0.1.0"
edition = "2024"

[dependencies]
agh-core   = { path = "../agh-core" }
reqwest    = { workspace = true }
flate2     = { workspace = true }
tar        = { workspace = true }
sha2       = { workspace = true }
hex        = { workspace = true }
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
